<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f3f1"
    android:id="@+id/emergencyContactFragment"
    tools:context="ui.entertainer.EmergencyContactFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="@dimen/margin_20dp"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next Of Kin"
        android:textSize="@dimen/text_size_16sp"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/oxblood_main"
        />

  <EditText
      android:id="@+id/edit_profile_fragment_first_name_et"
      android:layout_width="match_parent"
      android:hint="@string/first_name"
      android:background="@drawable/custom_edit_text_input"
      android:layout_height="40dp"
      android:layout_marginBottom="@dimen/margin_15dp"
      android:paddingLeft="@dimen/margin_10dp"
      android:textSize="@dimen/text_size_16sp"
      android:inputType="text"

      />
    <EditText
        android:id="@+id/edit_profile_fragment_last_name_et"
        android:layout_width="match_parent"
        android:hint="@string/last_name"
        android:background="@drawable/custom_edit_text_input"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:paddingLeft="@dimen/margin_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/emergency_contact_fragment_email_et"
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:background="@drawable/custom_edit_text_input"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:paddingLeft="@dimen/margin_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edit_profile_fragment_phone_et"
        android:layout_width="match_parent"
        android:hint="Phone"
        android:background="@drawable/custom_edit_text_input"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:paddingLeft="@dimen/margin_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edit_profile_fragment_alternate_phone_number_et"
        android:layout_width="match_parent"
        android:hint="@string/relationship"
        android:background="@drawable/custom_edit_text_input"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:paddingLeft="@dimen/margin_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:inputType="text"
        />

  <TextView
      android:id="@+id/edit_profile_fragment_change_password_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/professional_contact"
      android:textSize="@dimen/text_size_16sp"
      android:layout_marginVertical="@dimen/margin_15dp"
      android:fontFamily="@font/poppins"
      android:textColor="@color/oxblood_main"
      />


    <EditText
        android:id="@+id/edit_profile_old_password_et"
        android:layout_width="match_parent"
        android:hint="@string/first_name"
        android:background="@drawable/custom_edit_text_input"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:paddingLeft="@dimen/margin_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:inputType="text"

        />
    <EditText
        android:id="@+id/edit_profile_new_passord_et"
        android:layout_width="match_parent"
        android:hint="@string/last_name"
        android:background="@drawable/custom_edit_text_input"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:paddingLeft="@dimen/margin_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/edit_profile_confirm_password__et"
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:background="@drawable/custom_edit_text_input"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:paddingLeft="@dimen/margin_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/emergency_contact_fragment_pro_phone_et"
        android:layout_width="match_parent"
        android:hint="Phone"
        android:background="@drawable/custom_edit_text_input"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:paddingLeft="@dimen/margin_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/emergency_contact_fragment_pro_relationship_et"
        android:layout_width="match_parent"
        android:hint="@string/relationship"
        android:background="@drawable/custom_edit_text_input"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:paddingLeft="@dimen/margin_10dp"
        android:textSize="@dimen/text_size_16sp"
        android:inputType="text"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update Contact"
        style="@style/onBoarding_oxblood_button"
        android:paddingVertical="@dimen/margin_10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginVertical="@dimen/margin_50dp"
        />

  </LinearLayout>
</androidx.core.widget.NestedScrollView>